<resources>
    <string name="app_name">tamm-FeelsBook</string>
    <string name="button">Button</string>
    <string name="button_add_feel">Add New Feeling</string>
    <string name="button_del_feel">Delete Feeling</string>
    <string name="button_view_count">View Count</string>
    <string name="button_add_love">Love</string>
    <string name="button_add_joy">Joy</string>
    <string name="button_add_surprise">Surprise</string>
    <string name="button_add_anger">Anger</string>
    <string name="button_add_sadness">Sadness</string>
    <string name="button_add_fear">Fear</string>
    <string name="optional_feel_text">Comment: type text, 100 chars. \nChange Feeling: type feeling.\nChange Date: type full date+time.\nPress+hold feeling to add.</string>
    <string name="button_add">Add</string>
    <string name="button_clear">Clear Feeling List</string>
    <string name="love_count_text">Love count ...</string>
    <string name="joy_count_text">Joy count ...</string>
    <string name="surprise_count_text">Surprise count ...</string>
    <string name="anger_count_text">Anger count ...</string>
    <string name="sadness_count_text">Sadness count ...</string>
    <string name="fear_count_text">Fear count ...</string>
    <string name="button_additional_options">Additional Options</string>
    <string name="button_edit_feeling">Modify Feeling</string>
    <string name="button_back_to_main">Main Activity</string>
    <string name="button_to_modify_feeling">Modify Feeling</string>
    <string name="button_to_view_count">View Counts</string>
    <string name="button_view_history">Feeling History</string>
</resources>
